# webview_plus

./: ._CHANGELOG.md  ._README.md  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/: index.html
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  (+1 more)
ios/: flutter_webview.podspec  webview_plus.podspec
ios/flutter_webview/: Package.swift
lib/: webview_plus.dart  webview_plus_method_channel.dart  webview_plus_platform_interface.dart  webview_plus_web.dart
lib/src/: webview_plus_cache_manager.dart  webview_plus_context_menu.dart  webview_plus_controller.dart  webview_plus_desktop_scrollbar_theme.dart  webview_plus_environment.dart  webview_plus_initial_data.dart  webview_plus_preloader.dart  webview_plus_settings.dart  webview_plus_user_script.dart  webview_plus_web.dart  webview_plus_web_stub.dart  webview_plus_widget.dart
linux/: CMakeLists.txt  webview_plus_plugin.cc  webview_plus_plugin_private.h
linux/common/: method_channel_utils.cc  method_channel_utils.h
linux/platform/: flutter_view.cc
linux/rendering/: texture_bridge_linux.cc  texture_bridge_linux.h
linux/webview/: linux_webview.cc  webview_internal.h  webview_method_handler.cc
macos/: webview_plus.podspec
macos/webview_plus/: Package.swift
windows/: CMakeLists.txt  webview_plus_plugin.cpp  webview_plus_plugin.h  webview_plus_plugin_c_api.cpp
windows/include/webview_plus/: webview_plus_plugin_c_api.h
windows/platform/: webview_platform.cc  webview_platform.h  winrt_runtime.cc  winrt_runtime.h
windows/rendering/: graphics_context.cc  graphics_context.h  texture_bridge.cc  texture_bridge.h  texture_bridge_gpu.cc  texture_bridge_gpu.h
windows/util/: d3dutil.h  direct3d11.interop.cc  direct3d11.interop.h  logging.h
(+22 files in other folders)
